--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "TaskManagerApp:build"
+            "browserTarget": "TaskManagerApp:build",
+            "proxyConfig": "proxy.conf.json" 
           },
           "configurations": {
             "production": {
